# Inv_bot

./: CMakeLists.txt  package.xml
costmap/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
launch/: move_base.launch
src/: navigation_goals.cpp
urdf/: slave.xacro
